--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,15 @@
 <body class="home-page">
   <header id="top-content">
 
-  <div id="home-title"><span class="strong">Comedy</span><span class="satisfy">Chat</span></div>
+  <div id="home-title"><span class="strong">Comedy</span><span class="satisfy">Chat</span><span style="float:right; padding-right:10px; "><a href="https://twitter.com/comedydotchat"><img style="height:60px; width:auto;" src="https://s3-us-west-2.amazonaws.com/elof/twitter-icon.png" alt="tweet tweet" /></a></span></div>
 
     <div class="header-content">
-      <div class="container text-center">
-        <div class="row">
-        </div>
-        <div class="row">
-          <div class="span6 offset3">
+      <div class="container-fluid">
+        <div class="row-fluid">
+          <div class="span6">
+            <iframe width="100%" height="475" src="https://www.youtube.com/embed/G9_EGubLrxE" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="span6">
             <div id="firechat-container" class="clearfix"></div>
             <div id="user-info">
               Logged in as <span id="user-name">.</span>
@@ -33,6 +34,10 @@
           </div>
         </div>
     </div>
+  </div>
+  <div class="footer" style="color:white padding-left:30px;">
+    A <a href="http://taco.computer">TACO DOT COMPUTER</a> PRODUCTION
+  </div>
   </header>
 
 
