--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
   </div>
-  <div class="footer" style="color:white padding-left:30px;">
+  <div class="footer" style="color:white">
     A <a href="http://taco.computer">TACO DOT COMPUTER</a> PRODUCTION
   </div>
   </header>
@@ -49,7 +49,7 @@
     <div class="modal-body text-center">
       <p>
         <a id="twitter-signin" href="javascript:login('twitter');">
-          <img id="twitter-signin-btn" src="images/sign-in-with-twitter.png">
+          <img id="twitter-signin-btn" src="public/images/sign-in-with-twitter.png">
         </a>
       </p>
     </div>
