--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="footer" style="color:white padding-left:30px;">
-    A <a href="http://taco.computer">TACO DOT COMPUTER</a> PRODUCTION
+    A <a target="_blank" href="http://taco.computer">TACO DOT COMPUTER</a> PRODUCTION
   </div>
   </header>
 
