--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <div class="row-fluid">
           <div class="span6">
-            <iframe width="100%" height="475" src="https://www.youtube.com/embed/G9_EGubLrxE" frameborder="0" ></iframe>
+            <iframe width="100%" height="475" src="https://www.youtube.com/embed/G9_EGubLrxE?autoplay=1" frameborder="0" ></iframe>
           </div>
           <div class="span6">
             <div id="firechat-container" class="clearfix"></div>
