fix chatroom and signup

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
   <div id="auth-modal" class="modal hide fade" tabindex="-1" role="dialog">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">×</button>
-      <h4 id="myModalLabel">Authenticate to continue</h4>
+      <h4 id="myModalLabel">Sign in to join the conversation!</h4>
     </div>
     <div class="modal-body text-center">
       <p>
@@ -88,11 +88,11 @@
         $('#user-name').text(username);
         $('#user-info').show();
         setTimeout(function() {
-          chat._chat.enterRoom('-Iy1N3xs4kN8iALHV0QA')
+          chat._chat.enterRoom('-K1RWHYZG5rJCN7GTqKj')
         }, 500);
       } else {
         $('#user-info').hide();
-        chat._chat.enterRoom('-Iy1N3xs4kN8iALHV0QA')
+        chat._chat.enterRoom('-K1RWHYZG5rJCN7GTqKj')
       }
     });
 
